CSS and Angular Changes
1. headers -> Changes to mat-toolbar from navbar
2. CSS overhaul

--- a/railway-app/src/app/booking-forms/booking-forms.component.css
+++ b/railway-app/src/app/booking-forms/booking-forms.component.css
@@ -33,7 +33,7 @@ button {
     font-weight: 300;
     text-align: left;
 }
-label {
+.label {
     font-size: 15px;
     font-weight: 500 !important;
     color: #128efa !important;
