--- a/railway-app/src/app/signedin/signedin.component.css
+++ b/railway-app/src/app/signedin/signedin.component.css
@@ -1,6 +1,10 @@
 .nav-item{
     margin-left: 0px;
     background: #e9edef;
+    color: #275ea3;
+    font-family: 'Segoe UI', sans-serif;
+    font-weight: 100;
+    font-size: 1.4rem;
 }
 .navbar{    
     background-color: #000010;
@@ -15,4 +19,14 @@ h2 a{
 } 
 img{
     height: 45px;
+}
+h3 {
+    font-family: 'Segoe UI', sans-serif;
+    font-weight: 300;
+    font-size: 2.0rem;
+    text-align: center;
+    color: #275ea3;
+}
+mat-menu-item:hover{
+    background-color: #9ecfe7;
 }
